# statusbot

./: .gitignore  .gitreview  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
statusbot/: bot.py
statusbot/openstack/common/: version.py
tools/: pip-requires  test-requires
