[metadata]
name = statusbot
summary = OpenStack Infrastructure Status Bot
description-file =
    README.rst
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack-infra/statusbot
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
console_scripts =
    statusbot = statusbot.bot:main
